# libschannel

./: Makefile.am  README.md  autobuild.sh  configure.ac
doc/: Makefile.am  libschannel.3  libschannel.texi  schannel_close.3  schannel_dial.3  schannel_init.3  schannel_listen.3  schannel_recv.3  schannel_rekey.3  schannel_send.3  schannel_zero.3
src/: Makefile.am  schannel.c
src/schannel/: schannel.h
tools/: Makefile.am  keygen.c  nc.c
